<resources>
    <string name="app_name">Altay_Berkay_Car_Service</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add">AddActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="select_date">Select Date</string>
    <string name="add_new_car_service_record">Add New Car Service Record</string>
    <string name="brand">Brand:</string>
    <string name="enter_brand">Enter Brand</string>
    <string name="model">Model:</string>
    <string name="model_year">Model Year:</string>
    <string name="enter_model_year">Enter Model Year</string>
    <string name="license_plate">License Plate:</string>
    <string name="enter_licenseplate">Enter LicensePlate</string>
    <string name="current_km">Current KM:</string>
    <string name="enter_current_km">Enter Current KM</string>
    <string name="last_service_date">Last Service Date:</string>
    <string name="last_service_km">Last Service KM:</string>
    <string name="edit_car_service_record">Edit Car Service Record</string>
    <string name="enter_service_km">Enter Service KM</string>
    <string name="edit">EDIT</string>
    <string name="add">ADD</string>
    <string name="enter_model">Enter Model</string>
</resources>