<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/add_new_car_service_record"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.9"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>


    <TextView
        android:id="@+id/brandTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.5"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toBottomOf="@+id/guidelinetop2"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/brandEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_brand"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/guideline0.5"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toBottomOf="@id/brandTitle2" />

    <TextView
        android:id="@+id/modelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.9"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline0.5"
        app:layout_constraintTop_toBottomOf="@+id/guidelinetop2"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/modelEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_model"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/guideline0.9"
        app:layout_constraintStart_toStartOf="@id/guideline0.5"
        app:layout_constraintTop_toBottomOf="@id/modelTitle"/>

    <TextView
        android:id="@+id/modelYearTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/model_year"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.5"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toBottomOf="@+id/brandEditText" />

    <EditText
        android:id="@+id/modelYearEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_model_year"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/guideline0.5"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toBottomOf="@id/modelYearTitle" />

    <TextView
        android:id="@+id/licensePlateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/license_plate"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.9"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline0.5"
        app:layout_constraintTop_toBottomOf="@+id/modelEditText" />

    <EditText
        android:id="@+id/licensePlateEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_licenseplate"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/guideline0.9"
        app:layout_constraintStart_toStartOf="@id/guideline0.5"
        app:layout_constraintTop_toBottomOf="@id/licensePlateTitle" />

    <TextView
        android:id="@+id/currentKMTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/current_km"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.5"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toBottomOf="@+id/modelYearEditText" />

    <EditText
        android:id="@+id/currentKMEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_current_km"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/guideline0.5"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toBottomOf="@id/currentKMTitle" />

    <TextView
        android:id="@+id/lastServiceDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/last_service_date"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.9"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline0.5"
        app:layout_constraintTop_toBottomOf="@+id/licensePlateEditText" />

    <Button
        android:id="@+id/lastServiceDateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.9"
        app:layout_constraintStart_toStartOf="@id/guideline0.5"
        app:layout_constraintTop_toBottomOf="@id/lastServiceDateTitle"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/select_date"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/lastServiceKMTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/last_service_km"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.5"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toBottomOf="@+id/currentKMEditText" />

    <EditText
        android:id="@+id/lastServiceKMEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/enter_service_km"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/guideline0.5"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toBottomOf="@id/lastServiceKMTitle"/>

    <Button
        android:id="@+id/addNewCarButtonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline0.9"
        app:layout_constraintStart_toStartOf="@id/guideline0.5"
        app:layout_constraintTop_toBottomOf="@id/lastServiceDateButton"
        android:layout_marginTop="60dp"
        android:text="@string/add"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinetop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>