<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/edit_car_service_record"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.9"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/brandTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.5"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toBottomOf="@+id/guidelinetop2"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/editBrand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/guideline0.5"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toBottomOf="@id/brandTitle2" />

    <TextView
        android:id="@+id/modelTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.9"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline0.5"
        app:layout_constraintTop_toBottomOf="@+id/guidelinetop2"
        android:layout_marginTop="60dp"/>

    <EditText
        android:id="@+id/editModel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/guideline0.9"
        app:layout_constraintStart_toStartOf="@id/guideline0.5"
        app:layout_constraintTop_toBottomOf="@id/modelTitle2" />

    <TextView
        android:id="@+id/modelYearTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/model_year"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.5"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toBottomOf="@+id/editBrand" />

    <EditText
        android:id="@+id/editModelYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/guideline0.5"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toBottomOf="@id/modelYearTitle2" />

    <TextView
        android:id="@+id/licensePlateTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/license_plate"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.9"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline0.5"
        app:layout_constraintTop_toBottomOf="@+id/editModel" />

    <EditText
        android:id="@+id/editLicensePlate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/guideline0.9"
        app:layout_constraintStart_toStartOf="@id/guideline0.5"
        app:layout_constraintTop_toBottomOf="@id/licensePlateTitle2" />

    <TextView
        android:id="@+id/currentKMTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/current_km"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.5"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toBottomOf="@+id/editModelYear" />

    <EditText
        android:id="@+id/editCurrentKM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/guideline0.5"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toBottomOf="@id/currentKMTitle2" />

    <TextView
        android:id="@+id/lastServiceDateTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/last_service_date"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.9"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline0.5"
        app:layout_constraintTop_toBottomOf="@+id/editLicensePlate" />

    <Button
        android:id="@+id/lastServiceDateButton2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/guideline0.9"
        app:layout_constraintStart_toStartOf="@id/guideline0.5"
        app:layout_constraintTop_toBottomOf="@id/lastServiceDateTitle2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/select_date"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/lastServiceKMTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:text="@string/last_service_km"
        app:layout_constraintEnd_toEndOf="@id/guideline0.5"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toBottomOf="@+id/editCurrentKM" />

    <EditText
        android:id="@+id/editLastServiceKM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/guideline0.5"
        app:layout_constraintStart_toStartOf="@id/guideline0.1"
        app:layout_constraintTop_toBottomOf="@id/lastServiceKMTitle2"/>

    <Button
        android:id="@+id/editCarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline0.9"
        app:layout_constraintStart_toStartOf="@id/guideline0.5"
        app:layout_constraintTop_toBottomOf="@id/lastServiceDateButton2"
        android:layout_marginTop="60dp"
        android:text="@string/edit"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline0.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline0.9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinetop2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />


</androidx.constraintlayout.widget.ConstraintLayout>